@@ -30,6 +30,7 @@ plot</li>
 </ul>
 <h3>Description:</h3>
 <br>
+<p>Note that the Oscillator value is doubled before being graphed, purely to make it easier to view.</p>
 <h3>Alerts:&nbsp;</h3>
 <ul>
 </ul>
