@@ -18,6 +18,9 @@
   </li>
 </ul>
 <h3>Description:</h3>
+<p>The value is graphed on a 0 to -100 scale (historically Williams
+Percent R was graphed on a scale from 0 to 100 with 0 at the top and
+100 at the bottom.)</p>
 <br>
 <h3>Alerts:&nbsp;</h3>
 <ul>
